<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Browser</string>
    <string name="search_or_type_url">Search or type web address</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="new_tab">New Tab</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="share">Share</string>
    <string name="find_in_page">Find in page</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="error_loading_page">Error loading page</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="no_bookmarks">No bookmarks yet</string>
    <string name="no_history">No history yet</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_all">Clear all</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="date">Date</string>
    <string name="file_name">File name</string>
    <string name="file_size">File size</string>
    <string name="download_complete">Download complete</string>
    <string name="javascript_enabled">JavaScript enabled</string>
    <string name="javascript_disabled">JavaScript disabled</string>
    <string name="cookies_enabled">Cookies enabled</string>
    <string name="cookies_disabled">Cookies disabled</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="homepage">Homepage</string>
    <string name="search_engine">Search engine</string>
    <string name="privacy">Privacy</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cookies">Clear cookies</string>
    <string name="user_agent">User Agent</string>
    <string name="desktop_site">Desktop site</string>
    <string name="mobile_site">Mobile site</string>
    <string name="zoom_level">Zoom level</string>
    <string name="text_size">Text size</string>
    <string name="dark_mode">Dark mode</string>
    <string name="enable_javascript">Enable JavaScript</string>
    <string name="enable_cookies">Enable cookies</string>
    <string name="enable_location">Enable location</string>
    <string name="block_popups">Block pop-ups</string>
    <string name="save_passwords">Save passwords</string>
    <string name="autofill_forms">Autofill forms</string>
</resources>
